switch to recommend code